# libhagraph

./: .gitignore  AUTHORS  Makefile.am  autogen.sh  configure.ac  libhagraph.c  libhagraph.h  libhagraph.pc.in  makefile  version.h
doc/: hagraph.conf  hagraph_desktop.sh  hagraphs.conf
src/: Makefile.am  configfile.c  configfile.h  graph_names.c  graph_names.h  libhagraph.c  libhagraph.h  libhagraph_data.c  libhagraph_data.h
