lib_LTLIBRARIES = libhagraph.la
libhagraph_la_SOURCES = libhagraph.c libhagraph_data.c graph_names.c
libhagraphinclude_HEADERS = libhagraph.h libhagraph_data.h graph_names.h
libhagraphincludedir=$(includedir)/libhagraph-0.2/libhagraph/

LIBS = @gtk_LIBS@ @cairo_LIBS@
AM_CFLAGS = @CFLAGS@ @gtk_CFLAGS@ @cairo_CFLAGS@
